--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,11 @@
 body {
   font-family: "PT Sans Narrow", "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 24px;
 
   color: black;
+
+  font-weight: bold;
 }
 
 h1 {
