--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,101 @@ body {
   font-weight: bold;
 }
 
+.container {
+  width: 940px;
+  padding: 0 10px;
+  margin: 0 auto;
+
+  min-height: 70px;
+}
+
+.main-header {
+  margin-bottom: 60px;
+}
+
+.main-navigation {
+  float: left;
+  width: 780px;
+  
+  min-height: 70px;
+}
+
+.user-block {
+  float: right;
+  width: 140px;
+  min-height: 70px;
+}
+
+.clearfix {
+  content: "";
+
+  display: table;
+  clear: both;
+}
+
+.index-logo {
+  width: 368px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 25px;
+  
+  min-height: 204px;
+}
+
+.features-item {
+  float: left;
+  width: 300px;
+  margin-right: 20px;
+}
+
+.features-item:last-child {
+  margin-right: 0;
+}
+
+.index-content {
+  margin-bottom: 35px;
+  padding: 50px 80px;
+}
+
+.index-content-left {
+  float: left;
+  width: 380px;
+}
+
+.index-content-right {
+  float: left;
+  width: 300px;
+}
+
+.main-footer {
+  margin-top: 65px;
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+
+.footer-contacts {
+  float: left;
+  width: 320px;
+  
+  min-height: 90px;
+}
+
+.footer-social {
+  float: left;
+  width: 180px;
+  
+  min-height: 90px;
+}
+
+
+.footer-copyright {
+  float: right;
+  width: 180px;
+  
+  min-height: 90px;
+}
+
+
 h1 {
   font-size: 30px;
   line-height: 42px;
