--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,8 @@ body {
   color: black;
 
   font-weight: bold;
+  min-width: 1122px;
+  min-height: 1750px;
 }
 
 .container {
@@ -102,8 +104,30 @@ body {
   min-height: 90px;
 }
 
+.breadcrumbs {
+  margin-bottom: 55px;
+}
+
+.shop-main-information {
+  margin-bottom: 50px;
+}
+
+.shop-filters {
+  float: left;
+  width: 220px;
+  margin-right: 10px;
+}
+
+.shop-items {
+  float: right;
+  width: 700px;
+  margin-left: 10px;
+}
 
 h1 {
+  margin-top: 60px;
+  margin-bottom: ;
+
   font-size: 30px;
   line-height: 42px;
 
