--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,7 @@ body {
   margin-bottom: 55px;
 }
 
-.shop-main-information {
+.main-information {
   margin-bottom: 50px;
 }
 
@@ -122,6 +122,17 @@ body {
   float: right;
   width: 700px;
   margin-left: 10px;
+}
+
+.item-photos {
+  float: left;
+  width: 460px;
+  margin-right: 10px;
+}
+
+.item-description {
+  float: right;
+  width: 400px;
 }
 
 h1 {
