--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,14 @@ body {
   font-size: 14px;
   line-height: 24px;
 
-  color: black;
+  color: white;
+  background: black url("../img/background.png") no-repeat center top;
 
   font-weight: bold;
-  min-width: 1122px;
+
+  min-width: 960px;
   min-height: 1750px;
+  text-transform: uppercase;
 }
 
 .container {
@@ -20,6 +23,15 @@ body {
 
 .main-header {
   margin-bottom: 60px;
+
+  color: white;
+
+  background-color: black;
+}
+
+.main-header a {
+  color: white;
+  text-decoration: none;
 }
 
 .main-navigation {
@@ -29,10 +41,79 @@ body {
   min-height: 70px;
 }
 
+.main-navigation ul {
+  margin: 0;
+  padding: 0;
+
+  font-size: 0;
+
+  list-style: none;
+}
+
+.main-navigation li {
+  display: inline-block;
+
+  font-size: 16px;
+  line-height: 20px;
+
+  vertical-align: top;
+}
+
+.main-navigation a {
+  display: block;
+  padding: 25px 20px;
+
+  color: white;
+
+  text-decoration: none;
+}
+
+.main-navigation a:hover {
+  background: #242424;
+}
+
 .user-block {
   float: right;
-  width: 140px;
+  max-width: 140px;
   min-height: 70px;
+}
+
+.login {
+  position: relative;
+
+  display: inline-block;
+  padding: 25px 20px;
+  padding-left: 50px;
+
+  font-size: 16px;
+  line-height: 20px;
+
+  color: white;
+
+  text-decoration: none;
+  vertical-align: top;
+}
+
+.login:hover {
+  background: #242424;
+}
+
+.login::before {
+  content: "";
+  position: absolute;
+  top: 28px;
+  left: 20px;
+
+  width: 18px;
+  height: 16px;
+
+  background: transparent url("../img/sprite.png") no-repeat;
+  background-position: -5px -239px;
+  opacity: 0.3;
+}
+
+.login:hover::before {
+  opacity: 1;
 }
 
 .clearfix {
@@ -44,26 +125,75 @@ body {
 
 .index-logo {
   width: 368px;
-  margin-right: auto;
-  margin-left: auto;
+  height: 204px;
+  margin: 0 auto;
   margin-bottom: 25px;
   
   min-height: 204px;
+}
+
+.index-logo img {
+  width: 368px;
+  height: 204px;
+}
+
+.features {
+  margin-bottom: 80px;
 }
 
 .features-item {
   float: left;
   width: 300px;
   margin-right: 20px;
+
+  text-align: center;
 }
 
 .features-item:last-child {
   margin-right: 0;
 }
 
+.features-name {
+  position: relative;
+
+  display: block;
+  margin-bottom: 30px;
+  padding-bottom: 35px;
+
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.features-name::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+
+  display: block;
+  width: 20px;
+  height: 20px;
+  margin-left: -10px;
+
+  background-color: white;
+
+  transform: rotate(45deg);
+}
+
+.features-item p {
+  margin: 10px;
+  margin-bottom: 0;
+}
+
 .index-content {
+  width: 800px;
   margin-bottom: 35px;
   padding: 50px 80px;
+
+  color: black;
+
+  background: url("../img/separator.png") no-repeat center,
+   #f8f5f2 url("../img/pattern-white.jpg");
 }
 
 .index-content-left {
@@ -72,14 +202,148 @@ body {
 }
 
 .index-content-right {
-  float: left;
+  float: right;
   width: 300px;
+}
+
+.index-content-title {
+  margin: 0;
+  margin-bottom: 25px;
+
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.index-content p {
+  margin: 0;
+  margin-bottom: 25px;
+}
+
+.news-preview {
+  margin: 0;
+  padding: 0;
+  padding-right: 35px;
+
+  list-style: none;
+}
+
+.news-preview li {
+  margin-bottom: 25px;
+}
+
+.news-preview p {
+  margin-bottom: 0;
+}
+
+.news-preview time { 
+  text-decoration: none;
+}
+
+.btn {
+  display: inline-block;
+  margin-right: 16px;
+  padding: 10px 33px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 24px;
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
+  text-transform: uppercase;
+  text-decoration: none;
+  text-align: center;
+
+  color: white;
+  background-color: black;
+  border: 0;
+  outline: 0;
+
+  cursor: pointer;
+  vertical-align: top;
+}
+
+.btn:hover,
+.btn:after {
+  background: #663d15;
+}
+
+.btn.disabled,
+.btn:disabled {
+  cursor: default;
+  opacity: 0.5;
+}
+
+.btn.disabled:hover,
+.btn:disabled:hover {
+  background-color: #000000;
+}
+
+.gallery {
+  position: relative;
+
+  height: 260px;
+}
+
+.gallery-content {
+  height: 164px;
+  margin: 0;
+
+  background-color: #cccccc;
+  border: 7px solid white;
+}
+
+.gallery .btn {
+  position: absolute;
+  bottom: 0;
+
+  width: 140px;
+  margin: 0;
+}
+
+.gallery-prev {
+  left: 0;
+}
+
+.gallery-next {
+  right: 0;
+}
+
+.appointment-form input {
+  float: left;
+  width: 106px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  padding: 7px 15px;
+
+  font: inherit;
+  color: inherit;
+  text-transform: inherit;
+
+  background-color: #f9f6f3;
+  border: 2px solid black;
+  outline: none;
+}
+
+.appointment-form input:nth-child(2n) {
+  margin-right: 0;
+}
+
+.appointment-form .btn {
+  clear: both;
+  width: 100%;
+}
+
+.appointment-form input:focus {
+  border: 2px solid #663d15;
 }
 
 .main-footer {
   margin-top: 65px;
   padding-top: 60px;
   padding-bottom: 40px;
+
+  color: white;
+
+  background: #252525 url("../img/pattern-black.jpg");
 }
 
 .footer-contacts {
@@ -89,19 +353,93 @@ body {
   min-height: 90px;
 }
 
+.footer-contacts a {
+  color: white;
+}
+
+.footer-contacts a:hover {
+  text-decoration: none;
+}
+
 .footer-social {
   float: left;
   width: 180px;
-  
-  min-height: 90px;
+
+  text-align: center;
 }
 
+.footer-social p {
+  margin: 0;
+  margin-bottom: 15px;
+}
+
+.social-btn {
+  display: inline-block;
+  width: 43px;
+  height: 43px;
+  margin: 0 2px;
+
+  font-size: 0;
+  vertical-align: top;
+  text-decoration: none;
+
+  background: black url("../img/sprite.png") no-repeat center;
+  
+  transition: 
+    background-position 0.5s,
+    background-color 0.5s;
+}
+
+.social-btn:hover {
+  background-color: white;
+}
+
+.social-btn-fb {
+    background-position: -5px -27px;
+}
+
+.social-btn-fb:hover {
+  background-position: -5px -80px;
+}
+
+.social-btn-inst {
+    background-position: -5px -133px;
+}
+
+.social-btn-inst:hover {
+  background-position: -5px -186px;
+}
+
+.social-btn-vk {
+    background-position: -5px -265px;
+}
+
+.social-btn-vk:hover {
+  background-position: -5px -318px;
+}
 
 .footer-copyright {
   float: right;
   width: 180px;
   
-  min-height: 90px;
+  max-width: 180px;
+}
+
+.footer-copyright p {
+  margin: 0;
+  margin-bottom: 15px;
+
+  text-align: center;
+}
+
+.footer-copyright .btn {
+  margin-right: 0;
+}
+
+.footer-copyright .btn:hover {
+  color: black;
+
+  background-color: white;
 }
 
 .breadcrumbs {
@@ -152,9 +490,58 @@ h2 {
   font-weight: bold;
 }
 
-.index-content-title {
-  font-size: 30px;
-  line-height: 42px;
-
-  font-weight: bold;    
+/* SPRITE */
+.sprite {
+    background-image: url(spritesheet.png);
+    background-repeat: no-repeat;
+    display: block;
 }
+
+.sprite-checkbox-active {
+    width: 12px;
+    height: 12px;
+    background-position: -5px -5px;
+}
+
+.sprite-fb {
+    width: 43px;
+    height: 43px;
+    background-position: -5px -27px;
+}
+
+.sprite-fb-hover {
+    width: 43px;
+    height: 43px;
+    background-position: -5px -80px;
+}
+
+.sprite-inst {
+    width: 43px;
+    height: 43px;
+    background-position: -5px -133px;
+}
+
+.sprite-inst-hover {
+    width: 43px;
+    height: 43px;
+    background-position: -5px -186px;
+}
+
+.sprite-login {
+    width: 18px;
+    height: 16px;
+    background-position: -5px -239px;
+}
+
+.sprite-vk {
+    width: 43px;
+    height: 43px;
+    background-position: -5px -265px;
+}
+
+.sprite-vk-hover {
+    width: 43px;
+    height: 43px;
+    background-position: -5px -318px;
+}
+
