--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ body {
 }
 
 .main-header {
-  margin-bottom: 60px;
+  margin-bottom: 63px;
 
   color: white;
 
@@ -83,7 +83,7 @@ body {
 
   display: inline-block;
   padding: 25px 20px;
-  padding-left: 50px;
+  padding-left: 53px;
 
   font-size: 16px;
   line-height: 20px;
@@ -127,7 +127,8 @@ body {
   width: 368px;
   height: 204px;
   margin: 0 auto;
-  margin-bottom: 25px;
+  margin-bottom: 19px;
+  padding-left: 10px;
   
   min-height: 204px;
 }
@@ -138,7 +139,7 @@ body {
 }
 
 .features {
-  margin-bottom: 80px;
+  margin-bottom: 78px;
 }
 
 .features-item {
@@ -157,7 +158,7 @@ body {
   position: relative;
 
   display: block;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
   padding-bottom: 35px;
 
   font-size: 30px;
@@ -167,7 +168,7 @@ body {
 .features-name::after {
   content: "";
   position: absolute;
-  bottom: 0;
+  bottom: 3px;
   left: 50%;
 
   display: block;
@@ -186,9 +187,9 @@ body {
 }
 
 .index-content {
-  width: 800px;
+  width: 780px;
   margin-bottom: 35px;
-  padding: 50px 80px;
+  padding: 45px 80px 50px 80px;
 
   color: black;
 
@@ -208,15 +209,16 @@ body {
 
 .index-content-title {
   margin: 0;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
 
   font-size: 30px;
+  font-weight: bold;
   line-height: 42px;
 }
 
 .index-content p {
   margin: 0;
-  margin-bottom: 25px;
+  margin-bottom: 17px;
 }
 
 .news-preview {
@@ -237,12 +239,15 @@ body {
 
 .news-preview time { 
   text-decoration: none;
+  text-transform: none;
 }
 
 .btn {
   display: inline-block;
+  width: 140px;
+  margin: 0 auto;
   margin-right: 16px;
-  padding: 10px 33px;
+  padding: 10px 0;
 
   font-weight: 700;
   font-size: 14px;
@@ -307,6 +312,14 @@ body {
   right: 0;
 }
 
+.index-content:nth-of-type(3) p:nth-child(3) {
+  margin-bottom: 26px;
+}
+
+.appointment-form {
+  padding-top: 5px;
+}
+
 .appointment-form input {
   float: left;
   width: 106px;
@@ -364,6 +377,7 @@ body {
 .footer-social {
   float: left;
   width: 180px;
+  padding-left: 60px;
 
   text-align: center;
 }
@@ -421,7 +435,10 @@ body {
 .footer-copyright {
   float: right;
   width: 180px;
+  margin-right: -20px;
   
+  text-align: center;
+
   max-width: 180px;
 }
 
