--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ body {
 }
 
 .inner-page .main-header {
-  margin-bottom: 55px;
+  margin-bottom: 51px;
 }
 
 .main-header a {
@@ -412,6 +412,10 @@ body {
   background: #252525 url("../img/pattern-black.jpg");
 }
 
+.inner-page .main-footer {
+  padding-top: 55px;
+}
+
 .footer-contacts {
   float: left;
   width: 320px;
@@ -564,12 +568,12 @@ h2 {
 /* Стили внутренних страниц */
 
 .inner-page-title {
-  margin-bottom: 55px;
+  margin-bottom: 45px;
 }
 
 .inner-page-title h1 {
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 17px;
   padding: 0;
 
   font-size: 30px;
@@ -656,7 +660,7 @@ h2 {
 }
 
 .inner-content td {
-  padding: 10px 15px;
+  padding: 8px 15px;
 
   border: 2px solid #000000;
 }
@@ -665,8 +669,7 @@ h2 {
 /* Особые стили для контентных тегов */
 
 .big-heading {
-  margin-top: 55px;
-  margin-bottom: 65px;
+  margin-bottom: 60px;
 
   text-align: center;
 }
@@ -707,7 +710,7 @@ h2 {
 .custom-list-1 li {
   position: relative;
 
-  margin-bottom: 15px;
+  margin-bottom: 11px;
   padding-left: 20px;
 }
 
@@ -747,6 +750,10 @@ h2 {
   margin: 60px 0;
 }
 
+.inner-column-left {
+  margin-right: 20px;
+}
+
 .inner-column-left,
 .inner-column-right {
   width: 460px;
@@ -768,6 +775,10 @@ h2 {
 .inner-column-left *:last-child,
 .inner-column-right *:last-child {
   margin-bottom: 0;
+}
+
+.inner-columns > h2 {
+  margin-top: 0;
 }
 
 
